Pictures are cool

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 	<title>redlua</title>
 </head>
 <body>
-	<p>over construction</p>
+<p><b><em>still</em></b> over construction</p>
+<p>here's a picture:</p>
+<img src='redlua.jpg' alt='red moon' />
+<p>(p.s. construction is somewhere down here, i think)</p>
 </body>
